--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -36,3 +36,36 @@
     transform: rotate(360deg);
   }
 }
+
+#chat{
+  width: 400px;
+  max-height: 500px;
+}
+#record-button{
+  float: left;
+}
+
+.container{
+  flex-direction: row;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 250px;
+  padding-top: 20px;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (max-width: 1500px) {
+  .container{
+    flex-direction: row;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 10px;
+    padding-top: 20px;
+  }
+}
